BE: socialservice_add delete post